--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.4.0/mapbox-gl.js'></script>
 	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.4.0/mapbox-gl.css' rel='stylesheet' />
 	<script  src="https://code.jquery.com/jquery-3.4.1.min.js"  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="  crossorigin="anonymous"></script>
-	<script src='/2018/assets/colorbrewer/index.js'></script>
-	<link href='/2018/assets/colorbrewer/colorbrewer.css' rel='stylesheet' />
+	<script src='/assets/colorbrewer/index.js'></script>
+	<link href='/assets/colorbrewer/colorbrewer.css' rel='stylesheet' />
 	<script async defer src="https://api.mapbox.com/mapbox-assembly/v0.23.2/assembly.js"></script>
 	<link href="https://api.mapbox.com/mapbox-assembly/v0.23.2/assembly.min.css" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/f15ed359e8.js" crossorigin="anonymous"></script>
@@ -149,19 +149,19 @@
 			</div>
 			<div class="grid">
 				<div class="col m-auto align-center">
-					<img src="/2018/assets/right-arrow-grey.png" class="inline" style=" width: 10.8px; transform: rotate(-30deg);">
+					<img src="/assets/right-arrow-grey.png" class="inline" style=" width: 10.8px; transform: rotate(-30deg);">
 				</div>
 				<div class="col m-auto align-center">
-					<img src="/2018/assets/right-arrow-grey.png" class="inline" style=" width: 16.2px; transform: rotate(-30deg);">
+					<img src="/assets/right-arrow-grey.png" class="inline" style=" width: 16.2px; transform: rotate(-30deg);">
 				</div>
 				<div class="col m-auto align-center">
-					<img src="/2018/assets/right-arrow-grey.png" class="inline" style=" width: 21.6px; transform: rotate(-30deg);">
+					<img src="/assets/right-arrow-grey.png" class="inline" style=" width: 21.6px; transform: rotate(-30deg);">
 				</div>
 				<div class="col m-auto align-center">
-					<img src="/2018/assets/right-arrow-grey.png" class="inline" style=" width: 27px; transform: rotate(-30deg);">
+					<img src="/assets/right-arrow-grey.png" class="inline" style=" width: 27px; transform: rotate(-30deg);">
 				</div>
 				<div class="col m-auto align-center">
-					<img src="/2018/assets/right-arrow-grey.png" class="inline" style=" width: 32.4px; transform: rotate(-30deg);">
+					<img src="/assets/right-arrow-grey.png" class="inline" style=" width: 32.4px; transform: rotate(-30deg);">
 				</div>
 			</div>
 			<div class="grid txt-xs">
@@ -178,7 +178,7 @@
 				</div>
 				<div class="flex-child--grow pl6">
 					<div class="bg-blue inline-block round-full border border--black" style="height: 14px; width: 14px;"></div>
-					<img src="/2018/assets/right-arrow-black.png" class="inline" style="width: 24px; transform: translate(-22px,-5px) rotate(-45deg);">
+					<img src="/assets/right-arrow-black.png" class="inline" style="width: 24px; transform: translate(-22px,-5px) rotate(-45deg);">
 				</div>
 			</div>
 			
@@ -309,7 +309,7 @@
 		
 	</body>
 	<footer>
-		<script src='/2018/bmm2018.js'></script>
-		<link href='/2018/bmm2018.css' rel='stylesheet' />
+		<script src='/bmm2018.js'></script>
+		<link href='/bmm2018.css' rel='stylesheet' />
 	</footer>
 	</html>
