add colorbrewer and update cdn url version

--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
 	<link rel="shortcut icon" href="https://bmm.raphaelnussbaumer.com/2016/data/favicon.ico" type="image/x-icon" />
 
 	<!-- Script and style -->
-	<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.4.0/mapbox-gl.js'></script>
-	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.4.0/mapbox-gl.css' rel='stylesheet' />
-	<script  src="https://code.jquery.com/jquery-3.4.1.min.js"  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="  crossorigin="anonymous"></script>
-	<script src='/assets/colorbrewer/index.js'></script>
-	<link href='/assets/colorbrewer/colorbrewer.css' rel='stylesheet' />
-	<script async defer src="https://api.mapbox.com/mapbox-assembly/v0.23.2/assembly.js"></script>
-	<link href="https://api.mapbox.com/mapbox-assembly/v0.23.2/assembly.min.css" rel="stylesheet">
+	<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
+	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
+	<script  src="https://code.jquery.com/jquery-3.6.0.min.js"  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="  crossorigin="anonymous"></script>
+	<script src='/assets/colorbrewer.js'></script>
+	<script async defer src="https://api.mapbox.com/mapbox-assembly/v0.26.0/assembly.js"></script>
+	<link href="https://api.mapbox.com/mapbox-assembly/v0.26.0/assembly.min.css" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/f15ed359e8.js" crossorigin="anonymous"></script>
 	<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/intro.js/2.9.3/intro.min.js'></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.4/raphael-min.js"></script>
