--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
 	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
 	<script  src="https://code.jquery.com/jquery-3.6.0.min.js"  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="  crossorigin="anonymous"></script>
-	<script src='/assets/colorbrewer.js'></script>
+	<script src='./assets/colorbrewer.js'></script>
 	<script async defer src="https://api.mapbox.com/mapbox-assembly/v0.26.0/assembly.js"></script>
 	<link href="https://api.mapbox.com/mapbox-assembly/v0.26.0/assembly.min.css" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/f15ed359e8.js" crossorigin="anonymous"></script>
@@ -148,19 +148,19 @@
 			</div>
 			<div class="grid">
 				<div class="col m-auto align-center">
-					<img src="/assets/right-arrow-grey.png" class="inline" style=" width: 10.8px; transform: rotate(-30deg);">
+					<img src="./assets/right-arrow-grey.png" class="inline" style=" width: 10.8px; transform: rotate(-30deg);">
 				</div>
 				<div class="col m-auto align-center">
-					<img src="/assets/right-arrow-grey.png" class="inline" style=" width: 16.2px; transform: rotate(-30deg);">
+					<img src="./assets/right-arrow-grey.png" class="inline" style=" width: 16.2px; transform: rotate(-30deg);">
 				</div>
 				<div class="col m-auto align-center">
-					<img src="/assets/right-arrow-grey.png" class="inline" style=" width: 21.6px; transform: rotate(-30deg);">
+					<img src="./assets/right-arrow-grey.png" class="inline" style=" width: 21.6px; transform: rotate(-30deg);">
 				</div>
 				<div class="col m-auto align-center">
-					<img src="/assets/right-arrow-grey.png" class="inline" style=" width: 27px; transform: rotate(-30deg);">
+					<img src="./assets/right-arrow-grey.png" class="inline" style=" width: 27px; transform: rotate(-30deg);">
 				</div>
 				<div class="col m-auto align-center">
-					<img src="/assets/right-arrow-grey.png" class="inline" style=" width: 32.4px; transform: rotate(-30deg);">
+					<img src="./assets/right-arrow-grey.png" class="inline" style=" width: 32.4px; transform: rotate(-30deg);">
 				</div>
 			</div>
 			<div class="grid txt-xs">
@@ -177,7 +177,7 @@
 				</div>
 				<div class="flex-child--grow pl6">
 					<div class="bg-blue inline-block round-full border border--black" style="height: 14px; width: 14px;"></div>
-					<img src="/assets/right-arrow-black.png" class="inline" style="width: 24px; transform: translate(-22px,-5px) rotate(-45deg);">
+					<img src="./assets/right-arrow-black.png" class="inline" style="width: 24px; transform: translate(-22px,-5px) rotate(-45deg);">
 				</div>
 			</div>
 			
