--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 		
 	</body>
 	<footer>
-		<script src='/bmm2018.js'></script>
-		<link href='/bmm2018.css' rel='stylesheet' />
+		<script src='./bmm2018.js'></script>
+		<link href='./bmm2018.css' rel='stylesheet' />
 	</footer>
 	</html>
